Update 'ld0a25zxa-go' component image to: quay.io/rhtap_qe/rhtap-qe:e44f550e202d15ce9c4f20533c2cf7589c33d3cc@sha256:d27b824a8facfb4062b74c7248e023ed4ac44d8cd8db511e4503b55af3414456

--- a/components/ld0a25zxa-go/overlays/development/deployment-patch.yaml
+++ b/components/ld0a25zxa-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ld0a25zxa-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:e44f550e202d15ce9c4f20533c2cf7589c33d3cc@sha256:d27b824a8facfb4062b74c7248e023ed4ac44d8cd8db511e4503b55af3414456
+          name: container-image
